--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/sidebar.settings.design.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/sidebar.settings.design.html
@@ -597,12 +597,23 @@
     </div>
 </div>
 <div ng-if="(component.components[0].type === 'image-gallery' && component.components[0].version == 4) || (!vm.uiState.isNavHero(vm.component) && !vm.isHero && component.components[0].type === 'testimonials' && component.components[0].version == 2)">
+        <div class="row " ng-if="(component.components[0].type === 'image-gallery' && component.components[0].version == 4) ">
+            <div class="form-group">
+                <label for="bg_overlay"> Show half-overlay
+                    <span tooltip-placement="top" tooltip-append-to-body="true"  tooltip-append-to-body="true" tooltip="Add/remove Half-Overlay to slider.">
+                        <i class="fa fa-info-circle" />
+                    </span>
+                </label>
+                <switch ng-model="component.components[0].halfOverlay" class="pull-right"></switch>
+             </div>
+        </div>
     <h4 class="ssb-sidebar-sub-heading-separator">Slider Effects</h4>
     <div class="row padding-10">
 
         <div data-ng-include data-src=" 'assets/js/ssb-site-builder/ssb-components/shared/ssb-slider-dot-settings.html' "></div>
 
     </div>
+
 </div>
 
 
