Tune padding/margin (and label) of Half-overlay setting

--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/sidebar.settings.design.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/sidebar.settings.design.html
@@ -256,6 +256,17 @@
             ng-model="component.bg.video.url"
             ng-change="vm.constructVideoUrl(component);"/>
     </div>
+    <div class="form-group" ng-if="(component.components[0].type === 'image-gallery' && component.components[0].version == 4) ">
+        <div>
+            <label for="bg_overlay">
+                Half-overlay
+                <span tooltip-placement="top" tooltip-append-to-body="true"  tooltip-append-to-body="true" tooltip="Add/remove Half-Overlay to slider.">
+                    <i class="fa fa-info-circle" />
+                </span>
+            </label>
+            <switch ng-model="component.components[0].halfOverlay" class="pull-right"></switch>
+        </div>
+    </div>
 </div>
 
 <div ng-if="component.layout === 'header'">
@@ -597,16 +608,6 @@
     </div>
 </div>
 <div ng-if="(component.components[0].type === 'image-gallery' && component.components[0].version == 4) || (!vm.uiState.isNavHero(vm.component) && !vm.isHero && component.components[0].type === 'testimonials' && component.components[0].version == 2)">
-        <div class="row " ng-if="(component.components[0].type === 'image-gallery' && component.components[0].version == 4) ">
-            <div class="form-group">
-                <label for="bg_overlay"> Show half-overlay
-                    <span tooltip-placement="top" tooltip-append-to-body="true"  tooltip-append-to-body="true" tooltip="Add/remove Half-Overlay to slider.">
-                        <i class="fa fa-info-circle" />
-                    </span>
-                </label>
-                <switch ng-model="component.components[0].halfOverlay" class="pull-right"></switch>
-             </div>
-        </div>
     <h4 class="ssb-sidebar-sub-heading-separator">Slider Effects</h4>
     <div class="row padding-10">
 
