--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/sidebar.settings.design.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/sidebar.settings.design.html
@@ -256,8 +256,8 @@
             ng-model="component.bg.video.url"
             ng-change="vm.constructVideoUrl(component);"/>
     </div>
-    <div class="form-group" ng-if="(component.components[0].type === 'image-gallery' && component.components[0].version == 4) ">
-        <div>
+    <div  ng-if="(component.components[0].type === 'image-gallery' && component.components[0].version == 4) ">
+        <div class="form-group">
             <label for="bg_overlay">
                 Half-overlay
                 <span tooltip-placement="top" tooltip-append-to-body="true"  tooltip-append-to-body="true" tooltip="Add/remove Half-Overlay to slider.">
@@ -265,6 +265,13 @@
                 </span>
             </label>
             <switch ng-model="component.components[0].halfOverlay" class="pull-right"></switch>
+        </div>
+        <div class="form-group" ng-if="component.components[0].halfOverlay">
+                <h4 class="ssb-sidebar-sub-heading-separator">Overlay Postion</h4>
+                <div class="btn-group ssb-sidebar-btn-group">
+                    <button type="button" ng-click="component.components[0].halfOverlayPosition = 'left'" class="btn" ng-class="{'active': (!component.components[0].halfOverlayPosition || component.components[0].halfOverlayPosition  === 'left') }">Left</button>
+                    <button type="button" ng-click="component.components[0].halfOverlayPosition  = 'right'" class="btn" ng-class="{'active': component.components[0].halfOverlayPosition === 'right' }">Right</button>
+                </div>    
         </div>
     </div>
 </div>
