Allow any text component to be turned into a ticker (Boolean) #10400

--- a/public/admin/assets/js/ssb-site-builder/ssb-components/shared/sidebar.settings.design.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/shared/sidebar.settings.design.html
@@ -1130,14 +1130,21 @@
 </div>
 <div ng-if="component.type==='feature-list'" data-ng-include data-src=" 'assets/js/ssb-site-builder/ssb-components/feature-list/sidebar.settings.block.border.html' "></div>
 <div ng-if="component.type =='ssb-element-text'">
-        <div>
-            <h4 class="ssb-sidebar-sub-heading-separator">Vertical alignment</h4>
-            <div class="row padding-left-10 padding-right-10">
-                <div class="btn-group ssb-sidebar-btn-group ssb-sidebar-btn-group-small-top margin-bottom-15">
-                    <button type="button" ng-repeat="option in [
-                    'auto', 'top', 'center', 'bottom'
-                ]" ng-click="component.vertical_align = option" ng-model="component.vertical_align" class="btn text-capitalize" ng-class="{'active': option == component.vertical_align }">{{option}}</button>
-                </div>
+    <div>
+        <h4 class="ssb-sidebar-sub-heading-separator">Vertical alignment</h4>
+        <div class="row padding-left-10 padding-right-10">
+            <div class="btn-group ssb-sidebar-btn-group ssb-sidebar-btn-group-small-top margin-bottom-15">
+                <button type="button" ng-repeat="option in [
+                'auto', 'top', 'center', 'bottom'
+            ]" ng-click="component.vertical_align = option" ng-model="component.vertical_align" class="btn text-capitalize" ng-class="{'active': option == component.vertical_align }">{{option}}</button>
             </div>
         </div>
     </div>
+</div>
+<div ng-if="component.type =='ssb-element-text'" class="form-group  margin-bottom-20">
+    <label for="">
+        Allow ticker
+        <span tooltip-placement="top" tooltip-append-to-body="true" tooltip="Allow text component to be turned into a ticker."><i class="fa fa-info-circle" /></span>
+    </label>
+    <switch ng-model="component.allowTicker" class="pull-right"></switch>
+</div>
