--- a/public/admin/assets/js/ssb-site-builder/ssb-components/shared/sidebar.settings.layout.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/shared/sidebar.settings.layout.html
@@ -18,7 +18,7 @@
         <div class="row padding-10">
             <div class="form-group" ng-hide="component.disableTextSpacing && component.type === 'ssb-element-text'">
                 <label>Max Width</label>
-                <input type="text" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mw"  min="-0" max="5000" >
+                <input class="max-width-custom-input" placeholder="max width" type="text" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mw"  min="-0" max="5000">
             </div>
         </div>
 
@@ -84,14 +84,15 @@
         <div class="row padding-10">
             <div class="form-group" ng-hide="component.disableTextSpacing && component.type === 'ssb-element-text'">
                 <label>Max Width</label>
-                <ui-select on-select="vm.uiState.updatetestimonialWidth(component);vm.resizeWindow()" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mwmd" theme="bootstrap" ng-disabled="component.spacing.usePage">
+              <!--   <ui-select on-select="vm.uiState.updatetestimonialWidth(component);vm.resizeWindow()" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mwmd" theme="bootstrap" ng-disabled="component.spacing.usePage">
                     <ui-select-match placeholder="Select a Resolution">
                         <small ng-bind-html="$select.selected"></small>
                     </ui-select-match>
                     <ui-select-choices repeat="res in [320, 360, 480, 720, 768, 960, 1024, 1280, 1360, 1366, 1440, 1600, 1680, 1920, '100%'] | filter: $select.search track by $index">
                         <small ng-bind-html="res | highlight: $select.search"></small>
                     </ui-select-choices>
-                </ui-select>
+                </ui-select> -->
+                <input class="max-width-custom-input" placeholder="max width" type="text" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mwmd"  min="-0" max="5000">
             </div>
         </div>
         <div class="row padding-10" ng-class="{'disabled': component.disableTextSpacing && component.type === 'ssb-element-text'}">
@@ -156,14 +157,15 @@
         <div class="row padding-10">
             <div class="form-group" ng-hide="component.disableTextSpacing && component.type === 'ssb-element-text'">
                 <label>Max Width</label>
-                <ui-select on-select="vm.uiState.updatetestimonialWidth(component);vm.resizeWindow()" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mwsm" theme="bootstrap" ng-disabled="component.spacing.usePage">
+             <!--    <ui-select on-select="vm.uiState.updatetestimonialWidth(component);vm.resizeWindow()" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mwsm" theme="bootstrap" ng-disabled="component.spacing.usePage">
                     <ui-select-match placeholder="Select a Resolution">
                         <small ng-bind-html="$select.selected"></small>
                     </ui-select-match>
                     <ui-select-choices repeat="res in [320, 360, 480, 720, 768, 960, 1024, 1280, 1360, 1366, 1440, 1600, 1680, 1920, '100%'] | filter: $select.search track by $index">
                         <small ng-bind-html="res | highlight: $select.search"></small>
                     </ui-select-choices>
-                </ui-select>
+                </ui-select> -->
+                <input class="max-width-custom-input" placeholder="max width" type="text" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mwsm"  min="-0" max="5000">
             </div>
         </div>
 
@@ -229,14 +231,15 @@
         <div class="row padding-10">
             <div class="form-group" ng-hide="component.disableTextSpacing && component.type === 'ssb-element-text'">
                 <label>Max Width</label>
-                <ui-select on-select="vm.uiState.updatetestimonialWidth(component);vm.resizeWindow()" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mwxs" theme="bootstrap" ng-disabled="component.spacing.usePage">
+                <!-- <ui-select on-select="vm.uiState.updatetestimonialWidth(component);vm.resizeWindow()" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mwxs" theme="bootstrap" ng-disabled="component.spacing.usePage">
                     <ui-select-match placeholder="Select a Resolution">
                         <small ng-bind-html="$select.selected"></small>
                     </ui-select-match>
                     <ui-select-choices repeat="res in [320, 360, 480, 720, 768, 960, 1024, 1280, 1360, 1366, 1440, 1600, 1680, 1920, '100%'] | filter: $select.search track by $index">
                         <small ng-bind-html="res | highlight: $select.search"></small>
                     </ui-select-choices>
-                </ui-select>
+                </ui-select> -->
+               <input class="max-width-custom-input" placeholder="max width" type="text" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mwxs"  min="-0" max="5000">
             </div>
         </div>
 
@@ -304,7 +307,7 @@
         <div class="row padding-10">
             <div class="form-group" ng-hide="component.disableTextSpacing && component.type === 'ssb-element-text'">
                 <label>Max Width</label>
-                <input type="text"  ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mw"  min="0" max="5000" >
+                <input type="text" class="max-width-custom-input" placeholder="max width" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mw"  min="0" max="5000" >
             </div>
         </div>
 
@@ -370,14 +373,16 @@
         <div class="row padding-10">
             <div class="form-group" ng-hide="component.disableTextSpacing && component.type === 'ssb-element-text'">
                 <label>Max Width</label>
-                <ui-select on-select="vm.uiState.updatetestimonialWidth(component);vm.resizeWindow()" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mwmd" theme="bootstrap" ng-disabled="component.spacing.usePage">
+                <input class="max-width-custom-input" placeholder="max width" type="text" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mwmd"  min="-0" max="5000">
+
+                <!-- <ui-select on-select="vm.uiState.updatetestimonialWidth(component);vm.resizeWindow()" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mwmd" theme="bootstrap" ng-disabled="component.spacing.usePage">
                     <ui-select-match placeholder="Select a Resolution">
                         <small ng-bind-html="$select.selected"></small>
                     </ui-select-match>
                     <ui-select-choices repeat="res in [320, 360, 480, 720, 768, 960, 1024, 1280, 1360, 1366, 1440, 1600, 1680, 1920, '100%'] | filter: $select.search track by $index">
                         <small ng-bind-html="res | highlight: $select.search"></small>
                     </ui-select-choices>
-                </ui-select>
+                </ui-select> -->
             </div>
         </div>
 
@@ -443,14 +448,15 @@
         <div class="row padding-10">
             <div class="form-group" ng-hide="component.disableTextSpacing && component.type === 'ssb-element-text'">
                 <label>Max Width</label>
-                <ui-select on-select="vm.uiState.updatetestimonialWidth(component);vm.resizeWindow()" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mwsm" theme="bootstrap" ng-disabled="component.spacing.usePage">
+              <!--   <ui-select on-select="vm.uiState.updatetestimonialWidth(component);vm.resizeWindow()" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mwsm" theme="bootstrap" ng-disabled="component.spacing.usePage">
                     <ui-select-match placeholder="Select a Resolution">
                         <small ng-bind-html="$select.selected"></small>
                     </ui-select-match>
                     <ui-select-choices repeat="res in [320, 360, 480, 720, 768, 960, 1024, 1280, 1360, 1366, 1440, 1600, 1680, 1920, '100%'] | filter: $select.search track by $index">
                         <small ng-bind-html="res | highlight: $select.search"></small>
                     </ui-select-choices>
-                </ui-select>
+                </ui-select> -->
+                <input class="max-width-custom-input" placeholder="max width" type="text" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mwsm"  min="-0" max="5000">
             </div>
         </div>
 
@@ -516,14 +522,15 @@
         <div class="row padding-10">
             <div class="form-group" ng-hide="component.disableTextSpacing && component.type === 'ssb-element-text'">
                 <label>Max Width</label>
-                <ui-select on-select="vm.uiState.updatetestimonialWidth(component);vm.resizeWindow()" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mwxs" theme="bootstrap" ng-disabled="component.spacing.usePage">
+               <!--  <ui-select on-select="vm.uiState.updatetestimonialWidth(component);vm.resizeWindow()" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mwxs" theme="bootstrap" ng-disabled="component.spacing.usePage">
                     <ui-select-match placeholder="Select a Resolution">
                         <small ng-bind-html="$select.selected"></small>
                     </ui-select-match>
                     <ui-select-choices repeat="res in [320, 360, 480, 720, 768, 960, 1024, 1280, 1360, 1366, 1440, 1600, 1680, 1920, '100%'] | filter: $select.search track by $index">
                         <small ng-bind-html="res | highlight: $select.search"></small>
                     </ui-select-choices>
-                </ui-select>
+                </ui-select> -->
+                <input class="max-width-custom-input" placeholder="max width" type="text" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mwxs"  min="-0" max="5000">
             </div>
         </div>
 
@@ -592,7 +599,7 @@
     <div class="row padding-10">
         <div class="form-group" ng-hide="component.disableTextSpacing && component.type === 'ssb-element-text'">
             <label>Max Width</label>
-            <input type="text" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mw"  min="0" max="5000" >
+            <input type="text" class="max-width-custom-input" placeholder="max width" ng-model-options="{ debounce: 500 }" ng-model="component.spacing.mw"  min="0" max="5000" >
         </div>
         <div class="form-group" ng-if="(component.components[0].type === 'testimonials' && component.components[0].version == 2)">
             <label>
