--- a/public/admin/assets/js/ssb-site-builder/ssb-components/shared/sidebar.settings.design.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/shared/sidebar.settings.design.html
@@ -1129,7 +1129,7 @@
     </div>
 </div>
 <div ng-if="component.type==='feature-list'" data-ng-include data-src=" 'assets/js/ssb-site-builder/ssb-components/feature-list/sidebar.settings.block.border.html' "></div>
-<div ng-if="component.type =='ssb-element-text'">
+<div ng-if="component.type =='ssb-element-text' && component.isGrid">
     <div>
         <h4 class="ssb-sidebar-sub-heading-separator">Vertical alignment</h4>
         <div class="row padding-left-10 padding-right-10">
