SSB > Specific 'simple landing' page does not appear in page drop down menu on form builder component settings, if user tries to select the page in 'redirect' option #10391

--- a/public/admin/assets/js/ssb-site-builder/ssb-components/shared/form-builder-settings.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/shared/form-builder-settings.html
@@ -148,7 +148,7 @@
                         <label for="link-page" class="block">
                             Select Page
                         </label>
-                        <div ng-if="allPages">
+                        <div ng-if="allPages" class="redirect-to-page-select">
                             <ui-select ng-model="component.redirectUrl" theme="bootstrap">
                                 <ui-select-match placeholder="Select a page">
                                     <small ng-bind-html="$select.selected.title"></small>
