Styles and classes issue with dynamic templates

--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-hero/ssb-hero.layout.v5.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-hero/ssb-hero.layout.v5.html
@@ -10,7 +10,7 @@
     component-media="vm.uiState.componentMedia"
     section-index="vm.index"
     component-index="0"
-    show-component="vm.showSection(vm.section)"
+    show-component="vm.displaySection || vm.showSection(vm.section)"
     >
 </ssb-component-loader>
 
@@ -28,7 +28,7 @@
                 component-media="vm.uiState.componentMedia"
                 section-index="vm.index"
                 component-index="1"
-                show-component="vm.showSection(vm.section)"
+                show-component="vm.displaySection || vm.showSection(vm.section)"
                 >
             </ssb-component-loader>
         </div>
@@ -45,7 +45,7 @@
                 component-media="vm.uiState.componentMedia"
                 section-index="vm.index"
                 component-index="2"
-                show-component="vm.showSection(vm.section)"
+                show-component="vm.displaySection || vm.showSection(vm.section)"
                 >
             </ssb-component-loader>
         </div>
@@ -62,7 +62,7 @@
             component-media="vm.uiState.componentMedia"
             section-index="vm.index"
             component-index="3"
-            show-component="vm.showSection(vm.section)"
+            show-component="vm.displaySection || vm.showSection(vm.section)"
             >
         </ssb-component-loader>
     </div>
