--- a/public/admin/assets/js/dashboard/dohy.html
+++ b/public/admin/assets/js/dashboard/dohy.html
@@ -1,7 +1,6 @@
 <div ng-controller="DOHYCtrl as vm" class="dohy-dashboard-inner" ng-attr-style="{{vm.sectionBGStyle}}">
     <div class="dohy-dashboard-layer">
     </div>
-
     <!-- start: DASHBOARD TITLE -->
     <section id="page-title" class="padding-top-25 padding-bottom-15">
         <div class="row">
@@ -22,29 +21,19 @@
         </div>
     </section>
     <!-- end: DASHBOARD TITLE -->
-
     <div class="workstream-container container-fluid container-fullw" style="padding-top:0px;">
-
-
         <!-- start: Analytics -->
         <section class="image-grid row">
-
             <h1 class="mainTitle">
                 Key Business Insights
             </h1>
-
             <dashboard-inbox-component
                 state="vm.state"
                 ui-state="vm.uiState">
             </dashboard-inbox-component>
-
             <section class="indi-rounded panel panel-white dashboard-live-widget-container" style="">
-                <tabset class="tabbable tabs-left margin-bottom-0">
-                    <tab>
-                        <tab-heading>
-                            <i class="ti-bar-chart"></i>
-                        </tab-heading>
-
+                <div class="row">
+                    <div class="col-sm-12">
                         <div>
                             <div class="" id="overview"  ng-class="{'load1 csspinner': !liveTrafficConfig}">
                                 <div class="panel-heading border-light live-overview-container">
@@ -57,89 +46,19 @@
                                     <div class="height-215 col-sm-4">
                                         <div id="visitor_locations" ng-if="locationData"></div>
                                     </div>
-
                                 </div>
-
                                 <div class="panel-footer border-light">
-
                                 </div>
                             </div>
                         </div>
-
-                    </tab>
-                    <tab>
-                        <tab-heading>
-                            <i class="ti-user"></i>
-                        </tab-heading>
-                        <div class="panel-heading border-light live-overview-container">
-                            <h3 class="text-primary analytic-title"><strong>Live</strong> Visitors Details</h3>
-                        </div>
-                        <div class="panel-body" style="position: relative" >
-                            <div class="live-visitor-details" ng-if="vm.state.liveVisitorDetails.length">
-                                <!-- Live visitor details- -->
-
-                                <div class="col-sm-5 visitor-left-pane">
-                                    <ul class="">
-                                        <li ng-class="{'active-visitor-detail': vm.selectedVisitorIndex === $index}" ng-repeat="visitorDetail in vm.state.liveVisitorDetails track by $index"  ng-click ="vm.setActiveVisitorIndex($index)" class="cursor-pointer">
-                                            <div class="col-xs-4 visitor-address">{{visitorDetail.ip_address}}</div>
-                                            <div class="col-xs-8 visitor-timestamp">{{vm.convertUtcToLocal(visitorDetail.timestamp)}}</div>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="col-sm-7 visitor-right-pane">
-                                    <ul>
-
-                                        <li>
-                                            <div class="col-xs-4"><strong>IP Address</strong></div>
-                                            <div class="col-xs-8">{{vm.activeVisitorDetail.ip_address}}</div>
-                                        </li>
-                                        <li ng-if="vm.activeVisitorDetail.maxmind.continent">
-                                            <div class="col-xs-4"><strong>Continent</strong></div>
-                                            <div class="col-xs-8">{{vm.activeVisitorDetail.maxmind.continent}}</div>
-                                        </li>
-                                        <li ng-if="vm.activeVisitorDetail.maxmind.country">
-                                            <div class="col-xs-4"><strong>Country</strong></div>
-                                            <div class="col-xs-8">{{vm.activeVisitorDetail.maxmind.country}}</div>
-                                        </li>
-                                        <li ng-if="vm.activeVisitorDetail.maxmind.province">
-                                            <div class="col-xs-4"><strong>State</strong></div>
-                                            <div class="col-xs-8">{{vm.activeVisitorDetail.maxmind.province}}</div>
-                                        </li>
-                                        <li ng-if="vm.activeVisitorDetail.maxmind.city">
-                                            <div class="col-xs-4"><strong>City</strong></div>
-                                            <div class="col-xs-8">{{vm.activeVisitorDetail.maxmind.city}}</div>
-                                        </li>
-                                        <li ng-if="vm.activeVisitorDetail.maxmind.postal_code">
-                                            <div class="col-xs-4"><strong>Postal Code</strong></div>
-                                            <div class="col-xs-8">{{vm.activeVisitorDetail.maxmind.postal_code}}</div>
-                                        </li>
-                                        <li>
-                                            <div class="col-xs-4"><strong>Browser</strong></div>
-                                            <div class="col-xs-8">{{vm.activeVisitorDetail.user_agent.browser.name}} {{vm.activeVisitorDetail.user_agent.browser.version}}</div>
-                                        </li>
-                                        <li>
-                                            <div class="col-xs-4"><strong>OS Details</strong></div>
-                                            <div class="col-xs-8">{{vm.activeVisitorDetail.user_agent.os.name}} {{vm.activeVisitorDetail.user_agent.os.version}}</div>
-                                        </li>
-                                    </ul>
-                                    <hr>
-                                    <ul class="page-events">
-                                        <li ng-repeat="pageEvent in vm.activeVisitorDetail.pageEvents | orderBy:'-pageTime'">
-                                           <div class="col-xs-4">{{vm.convertUtcToLocal(pageEvent.pageTime)}}</div>
-                                            <div class="col-xs-8"><span class="text-adjust inline-block" tooltip-placement="top" tooltip="{{pageEvent.pageRequested}}">{{pageEvent.pageRequested}}</span></div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <h3 ng-if="!vm.state.liveVisitorDetails.length" class="center margin-top-30">
-                                No details found
-                            </h3>
-                        </div>
-                    </tab>
-                </tabset>
+                    </div>
+                </div> 
                 <div class="clearfix"></div>
             </section>
-
+            <section class="indi-rounded panel panel-white dashboard-live-widget-container" style="">
+                <live-status live="vm.state.liveVisitorDetails" active="vm.activeVisitorDetail" config="{options:liveTrafficConfig}" ></live-status> 
+                <div class="clearfix"></div>
+            </section>
 
             <div
                 ng-repeat="analytic in vm.state.analyticsWidgets track by analytic.name"
