--- a/public/admin/assets/js/dashboard/dohy.html
+++ b/public/admin/assets/js/dashboard/dohy.html
@@ -31,7 +31,7 @@
                 state="vm.state"
                 ui-state="vm.uiState">
             </dashboard-inbox-component>
-            <section class="indi-rounded panel panel-white dashboard-live-widget-container" style="">
+            <section class="indi-rounded panel panel-white dashboard-live-widget-container" >
                 <div class="row">
                     <div class="col-sm-12">
                         <div>
@@ -55,7 +55,7 @@
                 </div> 
                 <div class="clearfix"></div>
             </section>
-            <section class="indi-rounded panel panel-white dashboard-live-widget-container" style="">
+            <section class="indi-rounded panel panel-white dashboard-live-widget-container" id="dahs-live">
                 <live-status live="vm.state.liveVisitorDetails" active="vm.activeVisitorDetail" config="{options:liveTrafficConfig}" ></live-status> 
                 <div class="clearfix"></div>
             </section>
