--- a/public/admin/assets/js/dashboard/dohy.html
+++ b/public/admin/assets/js/dashboard/dohy.html
@@ -56,7 +56,7 @@
                 <div class="clearfix"></div>
             </section>
             <section class="indi-rounded panel panel-white dashboard-live-widget-container" id="dahs-live">
-                <live-status live="vm.state.liveVisitorDetails" active="vm.activeVisitorDetail" config="{options:liveTrafficConfig}" ></live-status> 
+                <live-status live="vm.state.liveVisitorDetails" active="vm.activeVisitorDetail" loading="vm.livedataLoading" ></live-status> 
                 <div class="clearfix"></div>
             </section>
 
