--- a/public/admin/assets/js/ssb-site-builder/ssb-components/shared/navigation_style.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/shared/navigation_style.html
@@ -2,6 +2,12 @@
     .navigation-v{{component.version}}.nav-header-{{component._id}} .navbar-default .navbar-nav.nav-align{
         text-align:{{component.nav.align}} !important;
     }
+    @media screen and (max-width: 768px){ 
+        .navigation-v{{component.version}}.nav-header-{{component._id}} .navbar-default .navbar-nav.nav-align li{
+            text-align:{{component.nav.align}} !important;
+        }
+    };
+
     .navigation-v{{component.version}}.nav-header-{{component._id}} .navbar-default .navbar-nav.nav-font-size > li a{
         font-size:{{component.nav.font.size}}px !important;
     }
