model window alignment issue #10594

--- a/public/scripts/modals/product-cart-modal.html
+++ b/public/scripts/modals/product-cart-modal.html
@@ -335,8 +335,8 @@
         </div>
       </div>
       <div class="row processing" style="" ng-if="checkoutModalState == 4">
-        <h3 style="margin-top: 110px;text-align: center;">Order Processing</h3>
-        <div class="text-center">
+        <h3 class="center  mb20">Order Processing</h3>
+        <div class="text-center padding-20">
           <span class="fa fa-spinner fa-spin fa-4x"></span>
         </div>
         <div style="margin-bottom:30px"></div>
