--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/sidebar.settings.design.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/sidebar.settings.design.html
@@ -271,7 +271,7 @@
                 <div class="btn-group ssb-sidebar-btn-group">
                     <button type="button" ng-click="component.components[0].halfOverlayPosition = 'left'" class="btn" ng-class="{'active': (!component.components[0].halfOverlayPosition || component.components[0].halfOverlayPosition  === 'left') }">Left</button>
                     <button type="button" ng-click="component.components[0].halfOverlayPosition  = 'right'" class="btn" ng-class="{'active': component.components[0].halfOverlayPosition === 'right' }">Right</button>
-                </div>    
+                </div>
         </div>
     </div>
 </div>
@@ -614,14 +614,16 @@
         </div>
     </div>
 </div>
+
 <div ng-if="(component.components[0].type === 'image-gallery' && component.components[0].version == 4) || (!vm.uiState.isNavHero(vm.component) && !vm.isHero && component.components[0].type === 'testimonials' && component.components[0].version == 2)">
+ <div ng-if="[10,11,12].indexOf(component.version) === -1">
     <h4 class="ssb-sidebar-sub-heading-separator">Slider Effects</h4>
     <div class="row padding-10">
 
         <div data-ng-include data-src=" 'assets/js/ssb-site-builder/ssb-components/shared/ssb-slider-dot-settings.html' "></div>
 
     </div>
-
+ </div>
 </div>
 
 
