#8579 issue fix for label

--- a/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/sidebar.settings.design.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-components/ssb-page-section/sidebar.settings.design.html
@@ -360,7 +360,7 @@
         </div>
     </div>
 </div>
-<div ng-if="(vm.component.components[0] && vm.component.components[0].src) || component.bg.img.show || (component.bg.video.show && component.bg.video.url)">
+<div ng-if="(vm.component.components[0] && vm.component.components[0].src && component.bg.img.show == true) || component.bg.img.show || (component.bg.video.show && component.bg.video.url)">
 
     <h4 class="ssb-sidebar-sub-heading-separator">Effects</h4>
 
