Dashboard > There is a mismatch between selected user Id and visitor details on “live visitor” widget for a specific scenario #10647

--- a/public/admin/assets/var/leadsource/js/dashboard/dohy.html
+++ b/public/admin/assets/var/leadsource/js/dashboard/dohy.html
@@ -60,7 +60,7 @@
                 <div class="clearfix"></div>
             </section>
             <section class="indi-rounded panel panel-white dashboard-live-widget-container" id="dahs-live">
-                <live-status live="vm.state.liveVisitorDetails" active="vm.activeVisitorDetail" loading="vm.livedataLoading" ></live-status> 
+                <live-status live="vm.state.liveVisitorDetails" active="vm.activeVisitorDetail" loading="vm.livedataLoading" index="vm.selectedVisitorIndex"></live-status> 
                 <div class="clearfix"></div>
             </section>
 
